connection detail view: fixed height for all stops, alignment

--- a/style/app.css
+++ b/style/app.css
@@ -465,7 +465,7 @@
 }
 
 .train-detail .train-arr-track {
-  top: -4px;
+  top: 7px;
   right: 0px;
 }
 
@@ -514,7 +514,9 @@
 .train-detail .stop {
   margin-bottom: 1em;
   display: flex;
+  align-items: center;
   position: relative;
+  height: 42px;
 }
 
 .train-detail .stop span {
@@ -533,10 +535,6 @@
   box-shadow: 6px 0 0 #fff, -6px 0 0 #fff;
 }
 
-.train-detail .intermediate-stops .stop {
-  margin-bottom: 2em;
-}
-
 .train-detail .last-stop {
   position: relative;
 }
@@ -546,7 +544,6 @@
   content: "";
   position: absolute;
   left: -25px;
-  margin-top: 6px;
   width: 10px;
   height: 10px;
   border-radius: 5px;
@@ -558,7 +555,7 @@
   content: "";
   position: absolute;
   left: -22px;
-  margin-top: 10px;
+  margin-top: 30px;
   width: 0px;
   height: 4em;
   border-left: 4px solid #fff;
@@ -569,7 +566,7 @@
 .train-detail:last-of-type .last-stop::after {
   content: "";
   position: absolute;
-  top: 11px;
+  top: 22px;
   left: -11px;
   width: 100%;
   border-top: 1px solid #ccc;
